--- a/to-do-list/src/data/Datatasks.json
+++ b/to-do-list/src/data/Datatasks.json
@@ -5,6 +5,7 @@
     { "id": "3", "task": "Finish Day 1 Development Tasks", "completed": false},
     { "id": "4", "task": "Finish Day 1 Research Tasks", "completed": false},
     { "id": "5", "task": "Finish Day 2 Development Tasks", "completed": false},
-    { "id": "6", "task": "Finish Day 2 Research Tasks", "completed": false},
-    {"id": "7", "what": "Correr por ai", "where": "School", "completed": false }
+    { "id": "6", "task": "Finish Day 2 Research Tasks", "completed": false}
+    
   ]
+  
